2008-08-01 [colin]	3.5.0cvs43

	* src/gtk/gtkutils.c
	* src/gtk/gtkvscrollbutton.c
		Oups, fix build

2008-08-01 [colin]	3.5.0cvs42

	* src/compose.c
	* src/foldersel.c
	* src/mainwindow.c
	* src/prefs_account.c
	* src/prefs_folder_item.c
	* src/prefs_quote.c
	* src/summaryview.c
	* src/gtk/gtkaspell.c
	* src/gtk/gtkutils.c
	* src/gtk/gtkvscrollbutton.c
		Replace a few deprecated function calls

2008-08-01 [paul]	3.5.0cvs41

	* src/action.c
		fix crash that occurs because of recent GtkUIManager
		changes. Thanks to Colin

2008-07-31 [colin]	3.5.0cvs40

	* src/addressbook.c
	* src/compose.c
	* src/mainwindow.c
	* src/messageview.c
		Some Maemo fixes
	* src/gtk/menu.c
	* src/gtk/menu.h
		Remove deprecated helper funcs

2008-07-30 [colin]	3.5.0cvs39

	* src/folderview.c
	* src/folderview.h
	* src/imap_gtk.c
	* src/mh_gtk.c
	* src/news_gtk.c
		Move the folderview popup menu to GtkUIManager

2008-07-29 [colin]	3.5.0cvs38

	* src/account.c
	* src/account.h
	* src/action.c
	* src/action.h
	* src/addressitem.h
	* src/compose.c
	* src/edittags.c
	* src/mainwindow.c
	* src/mainwindow.h
	* src/mimeview.c
	* src/summaryview.c
	* src/gtk/menu.c
	* src/gtk/menu.h
		Switch the main menu to GtkUIManager
		Warning fixes

2008-07-29 [colin]	3.5.0cvs37

	* src/news.c
		Fix bug 1684, 'view news messages with large 
		attachements segfaults'

2008-07-29 [colin]	3.5.0cvs36

	* src/action.c
	* src/action.h
	* src/addressbook.c
	* src/addressitem.h
	* src/compose.c
	* src/compose.h
	* src/messageview.c
	* src/messageview.h
	* src/summaryview.c
	* src/gtk/menu.c
	* src/gtk/menu.h
		More switches to GtkUIManager

2008-07-26 [colin]	3.5.0cvs35

	* src/gtk/menu.c
	* src/gtk/menu.h
		Fix prototype

2008-07-25 [colin]	3.5.0cvs34

	* src/addrcustomattr.c
	* src/addressbook.c
	* src/compose.c
	* src/editaddress.c
	* src/editaddress_other_attributes_ldap.h
	* src/edittags.c
	* src/mainwindow.c
	* src/mimeview.c
	* src/prefs_actions.c
	* src/prefs_filtering.c
	* src/prefs_template.c