@@ -3455,3 +3455,4 @@
 ( cvs diff -u -r 1.12.2.52 -r 1.12.2.53 src/action.c;  ) > 3.5.0cvs41.patchset
 ( cvs diff -u -r 1.382.2.461 -r 1.382.2.462 src/compose.c;  cvs diff -u -r 1.26.2.37 -r 1.26.2.38 src/foldersel.c;  cvs diff -u -r 1.274.2.259 -r 1.274.2.260 src/mainwindow.c;  cvs diff -u -r 1.105.2.138 -r 1.105.2.139 src/prefs_account.c;  cvs diff -u -r 1.52.2.65 -r 1.52.2.66 src/prefs_folder_item.c;  cvs diff -u -r 1.1.2.29 -r 1.1.2.30 src/prefs_quote.c;  cvs diff -u -r 1.395.2.378 -r 1.395.2.379 src/summaryview.c;  cvs diff -u -r 1.9.2.56 -r 1.9.2.57 src/gtk/gtkaspell.c;  cvs diff -u -r 1.5.2.76 -r 1.5.2.77 src/gtk/gtkutils.c;  cvs diff -u -r 1.5.2.11 -r 1.5.2.12 src/gtk/gtkvscrollbutton.c;  ) > 3.5.0cvs42.patchset
 ( cvs diff -u -r 1.5.2.77 -r 1.5.2.78 src/gtk/gtkutils.c;  cvs diff -u -r 1.5.2.12 -r 1.5.2.13 src/gtk/gtkvscrollbutton.c;  ) > 3.5.0cvs43.patchset
+( cvs diff -u -r 1.36.2.142 -r 1.36.2.143 src/common/utils.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/plugins/pgpcore/claws.def;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/plugins/pgpinline/claws.def;  ) > 3.5.0cvs44.patchset
